test/negative/WrongExtension.bananajava
public class WrongExtension {
    public WrongExpression() {}
}
